# gpu_exp

./: .gitignore  LICENSE  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/in/ramanujan/gpuexp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: matmul.cl
app/src/main/cpp/: CMakeLists.txt  matmul_jni.cpp
app/src/main/cpp/opencl/: opencl_loader.h
app/src/main/java/in/ramanujan/gpuexp/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/in/ramanujan/gpuexp/: ExampleUnitTest.java
